0.0201 July 10, 2010
 - Better error messages on failed queries.
 - Fixed the AccessToken parsing problem.
 - Fixed another POD formatting problem.
 - More cleanup.

0.0200 July 9, 2010
 - Added the Facebook::Graph::Query API, which allows for powerful searching of Facebook data.
 - Fixed a bunch of AccessToken and Authorize bugs.
 - Fixed a bunch of POD formatting problems.
 - Replaced URL with URI everywhere for consistency.

0.0100 July 8, 2010
 - Initial public release.